fixed overflowing image problem on small devices

--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -22,6 +22,10 @@
   .retina2x({
     background-image: url(/img/pages/home/maker-party_pattern-tile@2x.png);
   });
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .blog-section {
